# Audio-Stream

./: .gitignore  App.md  CMakeLists.txt  TASK.md
android_app/: settings.gradle.kts
android_app/app/: build.gradle.kts
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/cpp/: CMakeLists.txt  OboeAudio.cpp  OboeAudio.h  OboePlayback.cpp  OboePlayback.h  jni_bridge.cpp
android_app/app/src/main/java/com/audiostream/: MainActivity.kt  NativeEngine.kt
shared_core/: CMakeLists.txt
shared_core/include/: LockFreeQueue.h  OpusCodec.h  UdpTransport.h
shared_core/src/: OpusCodec.cpp
shared_core/transport/: ITransport.h  TcpUsbTransport.cpp  TcpUsbTransport.h  UdpTransport.cpp
windows_app/: CMakeLists.txt
windows_app/scripts/: setup_adb_tunnel.bat
windows_app/src/: WasapiLoopback.cpp  WasapiLoopback.h  WasapiRender.cpp  WasapiRender.h  main.cpp
